[build-system]
requires = ["setuptools"]

[project]
name = "cbhew"
description = "hew file read and write"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "2024.10.20"
dependencies = [
    'lark',
]
[tool.setuptools.packages.find]
exclude = ["build", "tests"]
