[build-system]
requires = ["setuptools"]

[project]
name = "cbhew"
description = "hew file read and write"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "2024.12.10"
dependencies = [
    'lark',
]

[tool.setuptools.package-data]
cbhew = ["*.lark", "*.cppcheck", "Doxyfile"]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]
